--- a/test/fixtures/nodes.yml
+++ b/test/fixtures/nodes.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  description: MyString
+  description: "foo"
+  id: 1
 
 two:
-  description: MyString
+  description: "bar"
+  id: 2
